# Backend

./: .env  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  rerquirements.txt
.github/workflows/: maintainability.yaml  reliability.yaml  security.yaml
Models/: models.py
Utils/: weather.py
core/: config.py  database.py  initial_data.py
data/: weather.db
dependencies/: security.py
models/: models.py
routers/: alerts.py  auth.py  locations.py  weather.py
schemas/: schemas.py
services/: alert_service.py  user_service.py  weather_service.py
src/: main.py
src/core/: database.py
src/dependencies/: security.py
src/models/: models.py
src/routers/: alerts.py  auth.py  locations.py
src/schemas/: schemas.py
src/services/: user_service.py  weather_service.py
tests/: main.py
tests/routers/alerts/: main.py  test_add_alert.py  test_delete_alert.py  test_edit_alert.py  test_get_alerts.py  test_get_alerts_notifications.py
tests/routers/auth/: test_login.py  test_me.py  test_register.py
tests/routers/location/: test_add_location.py  test_delete_location.py  test_get_locations.py
tests/routers/weather/: main.py  test_get_weather.py  test_get_weather_history.py
