[project]
name = "WeatherApp"
version = "0.1.0"
description = "An app to monitor weather conditions with alerts and historical data."
authors = [
    {name = "WeatherApp team"}
]
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.poetry]
version = "1.0"
name = "WeatherApp"
description = "An app to monitor weather conditions with alerts and historical data."
authors = ["WeatherApp team <frosty.maa1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
dotenv = ">=0.9.9,<0.10.0"
sqlalchemy = ">=2.0.40,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
python-jose = ">=3.4.0,<4.0.0"
passlib = ">=1.7.4,<2.0.0"
requests = ">=2.32.3,<3.0.0"
uvicorn = ">=0.34.2,<0.35.0"
bcrypt = "^4.3.0"
httpx = "^0.28.1"
flake8 = "^7.0.0"
bandit = "^1.7.7"
pytest = "^8.1.1"
pytest-cov = "^6.1.1"
flake8-max-function-length = "^0.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
